# MoMify-Langchain-PoC

./: .gitignore  Dockerfile  README.md  TODO.md  Transcript.py  app.py  docker-compose.yml  example.py  hello.py  pyproject.toml  requirements.txt  transcriptWhisper.py
MoMify/: app.py
MoMify/src/helpers/config/: __init__.py
MoMify/src/helpers/file_uploader/: file_uploader.py
MoMify/src/helpers/ollama/: chat_ollama.py
MoMify/src/helpers/prompts/: en_extract_MoM.py
examples/: LangServeExample.py  WhisperExample.py
prompts/: en-extract-MoM
src/helpers/MoM_extractor/: MoM_extractor.py
src/helpers/config/: __init__.py
src/helpers/file_uploader/: file_uploader.py
