[tool.poetry]
name = "langchain-transcript"
description = ""
authors = ["Thomgram <vui.thomas@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.3"
langchain-community = "^0.3"
langserve = "^0.3"
langchain-ollama = "^0.2"
fastapi = "^0.115.0"
sse-starlette = "^2.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
