[tool.poetry]
name = "MoMify"
version = "0.1.0"
description = "Generates a MoM from a video recording of a meeting."
authors = ["Thomgram <vui.thomas@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.3"
langchain-community = "^0.3"
langserve = "^0.3"
langchain-ollama = "^0.2"
fastapi = "^0.115.2"
sse-starlette = "^2.1.3"
pydub = "^0.25.1"
torch = "^2.4.1"
tqdm = "^4.66.5"
transformers = "^4.45.2"
librosa = "^0.10.2.post1"
streamlit = "^1.39.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
